// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LedgerImportStep > should render with multiple import 1`] = `
<div>
  <section
    data-testid="LedgerImportStep"
  >
    <div>
      <div
        class="mb-3 sm:hidden"
      >
        <div
          class="flex flex-row justify-between items-center px-3 w-full h-9 border-l-2 border-l-theme-primary-400 bg-theme-primary-100 dark:border-l-theme-primary-300 dark:bg-theme-secondary-800"
          data-testid="SectionHeaderMobile__wrapper"
        >
          <span
            class="text-base font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          >
            Addresses
          </span>
        </div>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="overflow-hidden w-full bg-white rounded border cursor-pointer border-theme-secondary-300 dark:border-theme-secondary-800 dark:bg-theme-background"
          data-testid="LedgerMobileItem__wrapper"
        >
          <div
            class="flex justify-between items-center px-4 w-full h-11 dark:bg-black bg-theme-secondary-100"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              Address #1
            </span>
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 dark:text-theme-secondary-500 p-0!"
              data-testid="LedgerImportStep__edit-alias"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="pencil"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M5.92 18.297L1 19l.703-4.72L14.054 1.828c1.105-1.104 2.913-1.104 4.118 0 1.104 1.105 1.104 2.913 0 4.118L5.92 18.297z"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
                <span>
                  Edit
                </span>
              </div>
            </button>
          </div>
          <div
            class="flex flex-col gap-4 px-4 pt-2.5 pb-4 w-full"
          >
            <div
              class="flex flex-col gap-2 w-36"
            >
              <span
                class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Address
              </span>
              <div
                class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                >
                  <span
                    class="overflow-hidden min-w-0 text-sm text-base font-semibold no-ligatures text-theme-secondary-900 dark:text-theme-secondary-200"
                    data-testid="Address__address"
                  >
                    DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq
                  </span>
                  <button
                    class="relative cursor-pointer ring-focus focus:outline-hidden"
                    data-ring-focus-margin="-m-1"
                    data-testid="clipboard-icon__wrapper"
                    type="button"
                  >
                    <div
                      class="text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                    >
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="copy"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                            />
                            <path
                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col gap-2 w-36"
              data-testid="LedgerMobileItem__network"
            >
              <span
                class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Value (ARK)
              </span>
              <div
                class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div>
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    0 ARK
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="overflow-hidden w-full bg-white rounded border cursor-pointer border-theme-secondary-300 dark:border-theme-secondary-800 dark:bg-theme-background"
          data-testid="LedgerMobileItem__wrapper"
        >
          <div
            class="flex justify-between items-center px-4 w-full h-11 dark:bg-black bg-theme-secondary-100"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              Address #1
            </span>
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 dark:text-theme-secondary-500 p-0!"
              data-testid="LedgerImportStep__edit-alias"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="pencil"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M5.92 18.297L1 19l.703-4.72L14.054 1.828c1.105-1.104 2.913-1.104 4.118 0 1.104 1.105 1.104 2.913 0 4.118L5.92 18.297z"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
                <span>
                  Edit
                </span>
              </div>
            </button>
          </div>
          <div
            class="flex flex-col gap-4 px-4 pt-2.5 pb-4 w-full"
          >
            <div
              class="flex flex-col gap-2 w-36"
            >
              <span
                class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Address
              </span>
              <div
                class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                >
                  <span
                    class="overflow-hidden min-w-0 text-sm text-base font-semibold no-ligatures text-theme-secondary-900 dark:text-theme-secondary-200"
                    data-testid="Address__address"
                  >
                    DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
                  </span>
                  <button
                    class="relative cursor-pointer ring-focus focus:outline-hidden"
                    data-ring-focus-margin="-m-1"
                    data-testid="clipboard-icon__wrapper"
                    type="button"
                  >
                    <div
                      class="text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                    >
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="copy"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                            />
                            <path
                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col gap-2 w-36"
              data-testid="LedgerMobileItem__network"
            >
              <span
                class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Value (ARK)
              </span>
              <div
                class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div>
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    NaN ARK
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`LedgerImportStep > should render with multiple import 2`] = `
<div>
  <section
    data-testid="LedgerImportStep"
  >
    <div>
      <div
        class="mb-3 sm:hidden"
      >
        <div
          class="flex flex-row justify-between items-center px-3 w-full h-9 border-l-2 border-l-theme-primary-400 bg-theme-primary-100 dark:border-l-theme-primary-300 dark:bg-theme-secondary-800"
          data-testid="SectionHeaderMobile__wrapper"
        >
          <span
            class="text-base font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          >
            Addresses
          </span>
        </div>
      </div>
      <div
        class="pb-2 rounded-xl border-transparent md:border-b-0 outline outline-1 outline-transparent md:outline-theme-secondary-300 md:border-b-theme-secondary-200 md:border-b-[5px] dark:md:border-theme-secondary-800 dark:md:outline-theme-secondary-800"
        data-testid="TableWrapper"
      >
        <div
          class="table-wrapper with-x-padding"
          role="table"
        >
          <table
            cellpadding="0"
            class="w-full table-auto"
          >
            <thead>
              <tr
                role="row"
              >
                <th
                  class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border dark:text-theme-secondary-500 dark:border-theme-secondary-800"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex align-top flex-inline"
                  >
                    <div
                      class=""
                    >
                      Address
                    </div>
                    <div
                      class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      <div
                        class="transition-transform rotate-180"
                        role="img"
                      >
                        <div
                          style="height: 10px; width: 10px;"
                        >
                          <svg
                            id="chevron-down-small"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 10 10"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border dark:text-theme-secondary-500 dark:border-theme-secondary-800"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-row-reverse justify-end align-top flex-inline"
                  >
                    <div
                      class=""
                    >
                      Edit Name
                    </div>
                    <div
                      class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      <div
                        class="transition-transform rotate-180"
                        role="img"
                      >
                        <div
                          style="height: 10px; width: 10px;"
                        >
                          <svg
                            id="chevron-down-small"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 10 10"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="relative border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
                data-testid="TableRow"
              >
                <td>
                  <div
                    class="flex justify-center items-center px-3 pl-3 my-1 ml-3 rounded-l transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
                  >
                    <div
                      class="flex flex-col flex-1 py-2"
                    >
                      <div
                        class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                      >
                        <span
                          class="text-base font-semibold text-theme-text"
                          data-testid="Address__alias"
                        >
                          <span
                            class="transition-colors duration-200 no-ligatures"
                            data-testid="TruncateEnd"
                          >
                            Address #1
                          </span>
                        </span>
                        <div
                          class="relative text-left sm:leading-5 grow leading-[17px]"
                        >
                          <span
                            class="overflow-hidden absolute w-full min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                            data-testid="Address__address"
                          >
                            DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq
                          </span>
                          <span>
                             
                          </span>
                        </div>
                        <button
                          class="relative cursor-pointer ring-focus focus:outline-hidden"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                          >
                            <div
                              style="height: 16px; width: 16px;"
                            >
                              <svg
                                id="copy"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                >
                                  <path
                                    d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                  />
                                  <path
                                    d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </button>
                      </div>
                      <div>
                        <span
                          class="text-sm font-semibold whitespace-nowrap text-theme-secondary-700 dark:text-theme-secondary-500"
                          data-testid="Amount"
                        >
                          0 ARK
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
                <td>
                  <div
                    class="flex justify-end items-center px-3 pr-3 my-1 mr-3 font-semibold rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
                  >
                    <button
                      class="inline-flex relative justify-center items-center p-4 my-2.5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-dark-800 dark:text-theme-dark-50 dark:hover:bg-theme-primary-500 hover:bg-theme-primary-800 focus:outline-hidden focus:ring-theme-primary-400"
                      data-testid="LedgerImportStep__edit-alias"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div>
                          <div
                            style="height: 14px; width: 14px;"
                          >
                            <svg
                              id="pencil"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M5.92 18.297L1 19l.703-4.72L14.054 1.828c1.105-1.104 2.913-1.104 4.118 0 1.104 1.105 1.104 2.913 0 4.118L5.92 18.297z"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                class="relative border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
                data-testid="TableRow"
              >
                <td>
                  <div
                    class="flex justify-center items-center px-3 pl-3 my-1 ml-3 rounded-l transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
                  >
                    <div
                      class="flex flex-col flex-1 py-2"
                    >
                      <div
                        class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                      >
                        <span
                          class="text-base font-semibold text-theme-text"
                          data-testid="Address__alias"
                        >
                          <span
                            class="transition-colors duration-200 no-ligatures"
                            data-testid="TruncateEnd"
                          >
                            Address #1
                          </span>
                        </span>
                        <div
                          class="relative text-left sm:leading-5 grow leading-[17px]"
                        >
                          <span
                            class="overflow-hidden absolute w-full min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                            data-testid="Address__address"
                          >
                            DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
                          </span>
                          <span>
                             
                          </span>
                        </div>
                        <button
                          class="relative cursor-pointer ring-focus focus:outline-hidden"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                          >
                            <div
                              style="height: 16px; width: 16px;"
                            >
                              <svg
                                id="copy"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                >
                                  <path
                                    d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                  />
                                  <path
                                    d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </button>
                      </div>
                      <div>
                        <span
                          class="text-sm font-semibold whitespace-nowrap text-theme-secondary-700 dark:text-theme-secondary-500"
                          data-testid="Amount"
                        >
                          0 ARK
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
                <td>
                  <div
                    class="flex justify-end items-center px-3 pr-3 my-1 mr-3 font-semibold rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
                  >
                    <button
                      class="inline-flex relative justify-center items-center p-4 my-2.5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-dark-800 dark:text-theme-dark-50 dark:hover:bg-theme-primary-500 hover:bg-theme-primary-800 focus:outline-hidden focus:ring-theme-primary-400"
                      data-testid="LedgerImportStep__edit-alias"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div>
                          <div
                            style="height: 14px; width: 14px;"
                          >
                            <svg
                              id="pencil"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M5.92 18.297L1 19l.703-4.72L14.054 1.828c1.105-1.104 2.913-1.104 4.118 0 1.104 1.105 1.104 2.913 0 4.118L5.92 18.297z"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`LedgerImportStep > should render with single import (lg) 1`] = `
<div>
  <section
    data-testid="LedgerImportStep"
  >
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex flex-col gap-4"
        data-tesid="DesktopImportSection__wrapper"
      >
        <div
          class="flex flex-col gap-2"
        >
          <span
            class="text-base font-semibold text-theme-secondary-700"
          >
            Imported
          </span>
          <div
            class="flex flex-col gap-4 py-5 px-6 rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="flex flex-row justify-between items-center w-full text-sm font-semibold sm:gap-3 sm:justify-start sm:text-base"
              data-testid="SectionBodyItem__wrapper"
            >
              <span
                class="text-theme-secondary-700 sm:w-[90px] dark:text-theme-secondary-500"
              >
                Address
              </span>
              <div
                class="sm:w-full text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                >
                  <div
                    class="relative text-left sm:leading-5 grow leading-[17px]"
                  >
                    <span
                      class="overflow-hidden absolute w-full min-w-0 text-base font-semibold no-ligatures text-theme-text"
                      data-testid="Address__address"
                    >
                      DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
                    </span>
                    <span>
                       
                    </span>
                  </div>
                  <button
                    class="relative cursor-pointer ring-focus focus:outline-hidden"
                    data-ring-focus-margin="-m-1"
                    data-testid="clipboard-icon__wrapper"
                    type="button"
                  >
                    <div
                      class="text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                    >
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="copy"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                            />
                            <path
                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <hr
              class="w-full border border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex flex-row justify-between items-center w-full text-sm font-semibold sm:gap-3 sm:justify-start sm:text-base"
              data-testid="SectionBodyItem__wrapper"
            >
              <span
                class="text-theme-secondary-700 sm:w-[90px] dark:text-theme-secondary-500"
              >
                Balance
              </span>
              <div
                class="sm:w-full text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
        data-tesid="DesktopImportSection__wrapper"
      >
        <div
          class="flex flex-col gap-2"
        >
          <span
            class="text-base font-semibold text-theme-secondary-700"
          >
            Address Name
          </span>
          <div
            class="flex flex-col gap-4 py-5 px-6 rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="flex flex-row justify-between items-center w-full text-sm font-semibold sm:gap-3 sm:justify-start sm:text-base"
              data-testid="SectionBodyItem__wrapper"
            >
              <span
                class="text-theme-secondary-700 sm:w-[90px] dark:text-theme-secondary-500"
              >
                Name
              </span>
              <div
                class="sm:w-full text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex flex-row justify-between items-center w-full"
                >
                  <span>
                    Address #1
                  </span>
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 dark:text-theme-secondary-500 p-0!"
                    data-testid="LedgerImportStep__edit-alias"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div>
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="pencil"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M5.92 18.297L1 19l.703-4.72L14.054 1.828c1.105-1.104 2.913-1.104 4.118 0 1.104 1.105 1.104 2.913 0 4.118L5.92 18.297z"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                      <span>
                        Edit
                      </span>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`LedgerImportStep > should render with single import (xs) 1`] = `
<div>
  <section
    data-testid="LedgerImportStep"
  >
    <div
      class="flex flex-col gap-6"
      data-testid="SingleImport__container-mobile"
    >
      <div>
        <div
          class="flex flex-row justify-between items-center px-3 w-full h-9 border-l-2 border-l-theme-primary-400 bg-theme-primary-100 dark:border-l-theme-primary-300 dark:bg-theme-secondary-800"
          data-testid="SectionHeaderMobile__wrapper"
        >
          <span
            class="text-base font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          >
            Imported
          </span>
        </div>
        <div
          class="flex flex-col gap-3 px-3 pt-3"
        >
          <div
            class="flex flex-row justify-between items-center w-full text-sm font-semibold sm:gap-3 sm:justify-start sm:text-base"
            data-testid="SectionBodyItem__wrapper"
          >
            <span
              class="text-theme-secondary-700 sm:w-[90px] dark:text-theme-secondary-500"
            >
              Address
            </span>
            <div
              class="sm:w-full text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <div
                class="w-32"
              >
                <div
                  class="flex overflow-hidden justify-between items-center space-x-2 w-full whitespace-nowrap"
                >
                  <span
                    class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-text"
                    data-testid="Address__address"
                  >
                    DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
                  </span>
                  <button
                    class="relative cursor-pointer ring-focus focus:outline-hidden"
                    data-ring-focus-margin="-m-1"
                    data-testid="clipboard-icon__wrapper"
                    type="button"
                  >
                    <div
                      class="text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                    >
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="copy"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                            />
                            <path
                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex flex-row justify-between items-center w-full text-sm font-semibold sm:gap-3 sm:justify-start sm:text-base"
            data-testid="SectionBodyItem__wrapper"
          >
            <span
              class="text-theme-secondary-700 sm:w-[90px] dark:text-theme-secondary-500"
            >
              Balance
            </span>
            <div
              class="sm:w-full text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                0 ARK
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="flex flex-row justify-between items-center px-3 w-full h-9 border-l-2 border-l-theme-primary-400 bg-theme-primary-100 dark:border-l-theme-primary-300 dark:bg-theme-secondary-800"
          data-testid="SectionHeaderMobile__wrapper"
        >
          <span
            class="text-base font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          >
            Address Name
          </span>
        </div>
        <div
          class="flex flex-col gap-3 px-3 pt-3"
        >
          <div
            class="flex flex-row justify-between items-center w-full text-sm font-semibold sm:gap-3 sm:justify-start sm:text-base"
            data-testid="SectionBodyItem__wrapper"
          >
            <span
              class="text-theme-secondary-700 sm:w-[90px] dark:text-theme-secondary-500"
            >
              Name
            </span>
            <div
              class="sm:w-full text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <div
                class="flex flex-row gap-2 items-center"
              >
                Address #1
                <hr
                  class="w-px h-5 border-transparent bg-theme-secondary-300 dark:bg-theme-secondary-800"
                />
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 dark:text-theme-secondary-500 p-0!"
                  data-testid="LedgerImportStep__edit-alias"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div>
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="pencil"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M5.92 18.297L1 19l.703-4.72L14.054 1.828c1.105-1.104 2.913-1.104 4.118 0 1.104 1.105 1.104 2.913 0 4.118L5.92 18.297z"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                    <span>
                      Edit
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
